updates for package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "solid-completions",
   "version": "0.0.1",
-  "description": "SublimeText compatible completions generator for Solid",
+  "description": "Atom Autocomplete+ provider and generator for SublimeText completions files for the Solid CSS Framework.",
   "main": "./lib/main.js",
   "author": "Mark Shuster (mark.shuster@buzzfeed.com)",
   "repository": "https://github.com/buzzfeed/solid-completions",
