--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "repository": "https://github.com/buzzfeed/solid-completions",
   "devDependencies": {
     "bf-solid": "latest",
+    "grunt": "^1.0.1",
     "grunt-contrib-clean": "^0.7.0",
     "grunt-postcss": "^0.7.1",
     "grunt-sass": "^1.1.0",
